--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
 
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Result</title>
+	</head>
+	<body><h1>OSSA</h1>
+    <h2>Online Subadult Skeletal Aging
+	<img src="http://bit.ly/RhrMEn" />
+		<p>I like eggs.</p>
+		<p>And ham!</p>
+		<p>But mostly sandwiches.</p>
+	</body>
+</html>
