--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body><h1>OSSA</h1>
     <h2>Online Subadult Skeletal Aging
-	<img src="http://bit.ly/RhrMEn" />
+	<img src="JUVE_SKEL.png"/>
 		<p>I like eggs.</p>
 		<p>And ham!</p>
 		<p>But mostly sandwiches.</p>
