--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
 		<title>Result</title>
 	</head>
 	<body><h1>OSSA</h1>
-    <h2>Online Subadult Skeletal Aging
-	<img src="JUVE_SKEL.png"/>
-		<p>I like eggs.</p>
-		<p>And ham!</p>
-		<p>But mostly sandwiches.</p>
+		<h2>Online Subadult Skeletal Aging</h2>
+			<img src="juve_skel.png"/>	
 	</body>
 </html>
