--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>Result</title>
-	</head>
+<html lang="en">
+<head>
+	 <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+	<title>OSSA</title>
+</head>	
+	
 	<body><h1>OSSA</h1>
 		<h2>Online Subadult Skeletal Aging</h2>
 			<img src="juve_skel.png"/>	
 	</body>
+
 </html>
