--- a/index.html
+++ b/index.html
@@ -1,7 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <title>Raphael Test</title>
-  <script
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<title>Raphaël JS Map</title>
+		<style type="text/css">
+			.united-kingdom {
+				background-image: url(img/united_kingdom.png);
+				background-repeat: no-repeat;
+			}
+			.heaven-on-earth {
+				fill: yellow;
+			}
+		</style>
+	</head>
+	<body>
+		<div id="map" class="united-kingdom">
+			<!-- Raphaël JS Map Here -->
+		</div>
+		<h3 id="region-name"></h3>
+		<script src="raphael-min.js"></script>
+		<script src="map.js"></script>
+	</body>
+</html>
+
       
