--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<div id="map" class="united-kingdom">
 			<!-- Raphaël JS Map Here -->
 		</div>
+		<h1>WORK</h1>
 		<h3 id="region-name"></h3>
 		<script src="raphael-min.js"></script>
 		<script src="map.js"></script>
